--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="ObjBlock2.cpp" />
-    <ClCompile Include="ObjBlock3.cpp" />
     <ClCompile Include="ObjBoss.cpp" />
     <ClCompile Include="GameL\Audio.cpp" />
     <ClCompile Include="GameL\DirectXDevice.cpp" />
@@ -71,10 +69,11 @@
     <ClCompile Include="SceneTitle.cpp">
       <Filter>scene</Filter>
     </ClCompile>
+    <ClCompile Include="ObjFlyingenemy.cpp">
+      <Filter>敵</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ObjBlock2.h" />
-    <ClInclude Include="ObjBlock3.h" />
     <ClInclude Include="GameHead.h" />
     <ClInclude Include="GameL\Audio.h" />
     <ClInclude Include="GameL\DirectXDevice.h" />
@@ -136,6 +135,9 @@
     </ClInclude>
     <ClInclude Include="SceneGameOver.h">
       <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjFlyingenemy.h">
+      <Filter>敵</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
