--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -62,6 +62,8 @@
     <ClCompile Include="CheckHit.cpp">
       <Filter>敵</Filter>
     </ClCompile>
+    <ClCompile Include="SceneDescription.cpp" />
+    <ClCompile Include="ObjDescription.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ObjBoss1.h" />
@@ -123,6 +125,8 @@
     <ClInclude Include="CheckHit.h">
       <Filter>敵</Filter>
     </ClInclude>
+    <ClInclude Include="SceneDescription.h" />
+    <ClInclude Include="ObjDescription.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="敵">
